Added lines to search for the Ceres installation on my laptop. Ceres must be included in the CMAKE_PREFIX_PATH

--- a/ar_demo/CMakeLists.txt
+++ b/ar_demo/CMakeLists.txt
@@ -18,6 +18,9 @@ find_package(catkin REQUIRED COMPONENTS
 )
 find_package(OpenCV REQUIRED)
 
+find_package(Ceres REQUIRED)
+include_directories(${CERES_INCLUDE_DIRS})
+
 catkin_package(
 
 )
